--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "name": ""
   },
   "dependencies": {
-    "electron": "^11.2.3"
+    "electron": "^11.2.3",
+    "electron-root-path": "^1.0.16",
+    "pixi.js": "^5.3.7"
   },
   "scripts": {
     "start": "electron ."
