--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "electron": "^11.2.3",
+    "electron-aspectratio": "^1.0.1",
     "electron-root-path": "^1.0.16",
-    "pixi.js": "^5.3.7"
+    "pixi.js": "^5.3.7",
+    "screenz": "^1.0.0"
   },
   "scripts": {
     "start": "electron ."
