--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "electron": "^11.2.3",
     "electron-aspectratio": "^1.0.1",
     "electron-root-path": "^1.0.16",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "keytar": "^7.4.0",
     "pixi.js": "^5.3.7",
-    "socket.io-client": "^3.1.1",
-    "screenz": "^1.0.0"
+    "screenz": "^1.0.0",
+    "socket.io-client": "^3.1.1"
   },
   "scripts": {
     "start": "electron ."
