--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": ""
   },
   "dependencies": {
+    "adapter": "^1.0.0-beta.10",
     "axios": "^0.21.1",
     "electron": "^11.2.3",
     "electron-aspectratio": "^1.0.1",
@@ -14,6 +15,7 @@
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "keytar": "^7.4.0",
+    "kurento-utils": "^6.16.0",
     "pixi.js": "^5.3.7",
     "screenz": "^1.0.0",
     "socket.io-client": "^3.1.1"
