--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "electron": "^11.2.3",
     "electron-aspectratio": "^1.0.1",
     "electron-root-path": "^1.0.16",
+    "fuse.js": "^6.4.6",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "keytar": "^7.4.0",
