--- a/config/settings.json
+++ b/config/settings.json
@@ -1,5 +1,5 @@
 {
-  "SERVER_ADDRESS": "http://localhost:4000",
+  "SERVER_ADDRESS": "http://localhost:4000/",
   "AUTHENTICATE_ADDRESS": "/authenticate/login",
   "REFRESH_ADDRESS": "/authenticate/refresh-token"
 }
