--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "adapter": "^1.0.0-beta.10",
     "axios": "^0.21.1",
+    "colorthief": "^2.3.2",
     "electron": "^11.2.3",
     "electron-aspectratio": "^1.0.1",
     "electron-root-path": "^1.0.16",
@@ -17,6 +18,7 @@
     "jwt-decode": "^3.1.2",
     "keytar": "^7.4.0",
     "kurento-utils": "^6.16.0",
+    "onecolor": "^3.1.0",
     "pixi.js": "^5.3.7",
     "screenz": "^1.0.0",
     "socket.io-client": "^3.1.1"
