--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
     "adapter": "^1.0.0-beta.10",
     "axios": "^0.21.1",
     "colorthief": "^2.3.2",
-    "electron": "^11.2.3",
+    "electron": "^13.1.6",
     "electron-aspectratio": "^1.0.1",
+    "electron-is-packaged": "^1.0.2",
     "electron-root-path": "^1.0.16",
     "fuse.js": "^6.4.6",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
-    "keytar": "^7.4.0",
+    "keytar": "^7.7.0",
     "kurento-utils": "^6.16.0",
     "onecolor": "^3.1.0",
-    "pixi.js": "^5.3.7",
+    "pixi.js": "^5.3.10",
     "screenz": "^1.0.0",
-    "socket.io-client": "^3.1.1"
+    "socket.io-client": "^3.1.3"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "electron --trace-deprecation ."
+  },
+  "devDependencies": {
+    "eslint": "^5.0.0"
   }
 }
