--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
-"SERVER_ADDRESS": "http://localhost:4000/",
-"AUTHENTICATE_ADDRESS": "/authenticate/login-dev",
-"REFRESH_ADDRESS": "/authenticate/refresh-token"
+  "SERVER_ADDRESS": "http://localhost:4000",
+  "AUTHENTICATE_ADDRESS": "/authenticate/login-dev",
+  "REFRESH_ADDRESS": "/authenticate/refresh-token"
 } 
 
