--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
 
-  "SERVER_ADDRESS": "http://localhost:4000",
+  "SERVER_ADDRESS": "https://82d9209e95e4.ngrok.io",
   "AUTHENTICATE_ADDRESS": "/authenticate/login-dev",
   "REFRESH_ADDRESS": "/authenticate/refresh-token"
 
