--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "socket.io-client": "^3.1.3"
   },
   "scripts": {
-    "start": "electron-forge start",
+    "start": "electron .",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
