--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,7 @@
 {
 
-  "SERVER_ADDRESS": "http://localhost:4000/",
-  "AUTHENTICATE_ADDRESS": "/authenticate/login",
+  "SERVER_ADDRESS": "https://cc67-80-83-22-25.ngrok.io",
+  "AUTHENTICATE_ADDRESS": "/authenticate/login-dev",
   "REFRESH_ADDRESS": "/authenticate/refresh-token"
 
 } 
