--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "electron-aspectratio": "^1.0.1",
     "electron-is-packaged": "^1.0.2",
     "electron-root-path": "^1.0.16",
+    "electron-settings": "^4.0.2",
     "electron-squirrel-startup": "^1.0.0",
     "fuse.js": "^6.4.6",
     "jquery": "^3.6.0",
