--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "socket.io-client": "^3.1.3"
   },
   "scripts": {
-    "start": "electron .",
+    "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
